--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -4,5 +4,13 @@ http_archive(
     name = "rules_cc",
     urls = ["https://github.com/bazelbuild/rules_cc/archive/main.tar.gz"],
     strip_prefix = "rules_cc-main",
-    sha256 = "8b7e1e0d75edaae657898f88b8e2cba61c42cb46adcaa3558b87bf239af483cf",
+    # sha256 = "8b7e1e0d75edaae657898f88b8e2cba61c42cb46adcaa3558b87bf239af483cf",
+)
+
+http_archive(
+    name = "fmt",
+    type = "zip",
+    url = "https://github.com/fmtlib/fmt/releases/download/7.1.3/fmt-7.1.3.zip",
+    strip_prefix = "fmt-7.1.3",
+    build_file = ":fmt.bazel",
 )
