--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -5,24 +5,24 @@ cc_binary(
     srcs = ["example_backtrace.cpp"],
     visibility = ["//visibility:public"],
     deps = [
-        "//:quill_noexcept",
+        "//:quill",
     ],
 )
 
-cc_binary(
-    name = "example_configure_backend",
-    srcs = ["example_configure_backend.cpp"],
-    visibility = ["//visibility:public"],
-    deps = [
-        "//:quill_noexcept",
-    ],
-)
+# cc_binary(
+#     name = "example_configure_backend",
+#     srcs = ["example_configure_backend.cpp"],
+#     visibility = ["//visibility:public"],
+#     deps = [
+#         "//:quill",
+#     ],
+# )
 
 cc_binary(
-    name = "example_configure_backend",
-    srcs = ["example_configure_backend.cpp"],
+    name = "example_console_colours",
+    srcs = ["example_console_colours.cpp"],
     visibility = ["//visibility:public"],
     deps = [
-        "//:quill_noexcept",
+        "//:quill",
     ],
 )
