--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -5,13 +5,13 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
     srcs = [filename],
     deps = [
         "//:quill_noexcept",
-    ]
+    ],
 ) for filename in glob(["example_*.cpp"])]
 
 [cc_binary(
-    name = filename[:-4] + "_with_exceptions",
+    name = filename[:-4],
     srcs = [filename],
     deps = [
         "//:quill",
-    ]
+    ],
 ) for filename in glob(["example_*.cpp"])]
