--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -12,6 +12,6 @@ load("@rules_cc//cc:defs.bzl", "cc_binary")
     name = filename[:-4],
     srcs = [filename],
     deps = [
-        "//quill:quill",
+        "//quill",
     ],
 ) for filename in glob(["example_*.cpp"])]
