--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -35,6 +35,9 @@ cc_library(
     srcs = SRCS,
     hdrs = HDRS,
     includes = INCLUDES,
+    copts = [
+        "-std=c++14",
+    ],
     linkopts = select({
         "//:platform_windows": [],
         "//conditions:default": [
@@ -52,6 +55,9 @@ cc_library(
     includes = INCLUDES,
     defines = [
         "QUILL_NO_EXCEPTIONS=1",
+    ],
+    copts = [
+        "-std=c++14",
     ],
     linkopts = select({
         "//:platform_windows": [],
